--- a/content/2019-11-09.md
+++ b/content/2019-11-09.md
@@ -1,9 +1,9 @@
 ---
-title: "First in Gatsby"
+title: "First in React"
 date: "2019-11-09"
-category: "frontend"
+category: "FrontEnd"
 tags:
-  - Gatsby
+  - React
 ---
 
-# 這是我的第一次接觸 Gatsby
+# 這是我的第一次接觸 React
