--- a/content/2019-11-10.md
+++ b/content/2019-11-10.md
@@ -1,9 +1,9 @@
 ---
-title: "First in Gatsby"
+title: "First in NodeJS"
 date: "2019-11-10"
-category: "frontend"
+category: "BackEnd"
 tags:
-  - Gatsby
+  - NodeJS
 ---
 
-# 這是我的第一次接觸 Gatsby
+# 這是我的第一次接觸 NodeJS
