--- a/content/2019-11-10.md
+++ b/content/2019-11-10.md
@@ -14,7 +14,7 @@ tags:
 Lorem markdownum huc suo ara, dubites celeri mihi bicolor. Secuti non? Suo opus
 quales dant, puppim hanc!
 
-```js
+```javascript
 enterprise /= mp_operating_quad;
 dsl_runtime.wired_horizontal_jquery = vramUs(64389, aix / socialSector + quad);
 if (3) {
