Complete categories page and archives page

--- a/content/posts/2019-11-09.md
+++ b/content/posts/2019-11-09.md
@@ -1,8 +1,8 @@
 ---
 title: "First in React"
-date: "2019-11-13"
-category: "BackEnd"
-cover: "5.jpg"
+date: "2018-11-09"
+category: "FrontEnd"
+cover: "2.jpg"
 tags:
   - React
 ---
