--- a/content/posts/2019-11-11.md
+++ b/content/posts/2019-11-11.md
@@ -1,8 +1,8 @@
 ---
-title: "First in React"
-date: "2019-11-12"
+title: "First in JavaScript"
+date: "2019-11-11"
 category: "FrontEnd"
-cover: "4.jpg"
+cover: "3.jpg"
 tags:
   - React
 ---
