--- a/content/posts/2019-11-12.md
+++ b/content/posts/2019-11-12.md
@@ -1,8 +1,8 @@
 ---
-title: "First in React"
-date: "2019-11-11"
+title: "First in Vue.js"
+date: "2019-11-12"
 category: "FrontEnd"
-cover: "3.jpg"
+cover: "4.jpg"
 tags:
   - React
 ---
