add SEO to templates-tag、category. Compress an image file to a WebP file

--- a/content/2019-11-10.md
+++ b/content/2019-11-10.md
@@ -2,7 +2,7 @@
 title: "First in NodeJS"
 date: "2019-11-10"
 category: "BackEnd"
-cover: "1.jpg"
+cover: "1.webp"
 tags:
   - NodeJS
   - JavaScript
